# LCLM

./: .env.example  .gitignore  CLAUDE.md  README.md  hf_models.md  pyproject.toml  requirements.txt
_modal_run/: lclm_hub_test.py  lclm_matrix.py  lclm_mirror_dataset.py  lclm_mirror_eval_datasets.py  lclm_patch_cards.py  lclm_patch_cards_v2.py  lclm_patch_configs.py  lclm_ruler4k.py  lclm_ruler_vllm.py  lclm_upload.py
agent/: README.md  __init__.py  _lib.py  agent_niah.py  run_agent_modal.py
data/: chat_utils.py  dataset.py  dynamic_packing_dataset.py  packing_utils.py  stateful_dataset.py
inference/: __init__.py  decode.py  encode.py  hf.py  vllm.py
inference/examples/: README.md  eval_ruler_niah.py  example_hf.py  example_vllm.py  prepare_ruler_niah.py
inference/vllm_inference/: _prompt_embeds.py  decode.py  encode.py
latent_context/: __init__.py  adapter.py  encoder.py  model.py  packed_flash.py  packed_flex.py  processor.py
scripts/: convert_checkpoint.sh  run_pipeline.sh  train.sh
scripts/distributed_configs/: accelerate.yaml  ddp_multi_node.yaml  deepspeed_zero1.yaml  deepspeed_zero1_multi_node.yaml  deepspeed_zero2.yaml  deepspeed_zero2_multi_node.yaml  deepspeed_zero3.yaml  deepspeed_zero3_hpz.json  deepspeed_zero3_hpz.yaml  fsdp_ddp.yaml  fsdp_full_shard.yaml  fsdp_hybrid_shard.yaml  fsdp_zero2.yaml  (+1 more)
train/: __init__.py  launch_train.py  trainer.py
utils/: __init__.py  checkpointing.py  convert_deepspeed_to_hf.py  convert_fsdp_to_hf.py  convert_safetensors_to_hf.py  env.py  load_zero_torch.py  nan_checks.py  scheduler.py  seed.py
(+33 files in other folders)
