[project]
name = "code-llava"
version = "0.1.0"
description = "Training pipeline for Code LLaVA"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Code LLaVA Contributors" }]
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "peft",
    "deepspeed",
    "datasets",
    "numpy",
    "tqdm",
    "wandb",
    "liger-kernel",
    "matplotlib",
    "seaborn",
    "openai",
    "python-dotenv",
    "flash-attn",
    "triton>=3.0.0",
    "pandas",
    "safetensors",
    "vllm>=0.5.3",
    "zstandard>=0.25.0",
    "flashinfer-python>=0.5.2",
    "flashinfer-cubin>=0.5.2",
    "torchdata>=0.8.0",
    "jinja2>=3.1.6",
    "pyyaml",
    "rouge-score",
    "pylcs>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "inference", "latent_context", "train", "utils"
]

[tool.uv]
no-build-isolation-package = ["flash-attn"] 